Fixed bug where flash container was not showing

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -100,8 +100,8 @@ footer {
 }
 
 .flash-container {
-  position: absolute;
   width: 100%;
+  z-index: -1; 
 }
 
 .alert-notice, .alert-alert {
